Fix z-index of magnifier

--- a/views/scss/plugins/magnifier.scss
+++ b/views/scss/plugins/magnifier.scss
@@ -9,7 +9,7 @@
     min-width: 50px;
     min-height: 25px;
     overflow: hidden;
-    z-index: 10000;
+    z-index: 1000000;
     background-color: $uiGeneralContentBg;
     opacity: 1;
     border: solid 1px $uiClickableHoverBg;
